# configs

./: .config.nix  .gitignore  README.md  devshell.toml  flake.nix  home.nix  shell.nix
env/nix/: home.nix  nix.conf
env/shell/: direnvrc
nix/home/: .bashrc  direnvrc  home.nix
pkgs/: default.nix
pkgs/go/gowrap/: default.nix  gomod2nix.toml
pkgs/python/pyjulia/: default.nix
pkgs/python/pylatex/: default.nix
python/: pyjulia.nix  pylatex.nix
shell/: .bashrc  direnvrc
templates/poetry/: .envrc  .gitignore  flake.nix  justfile  pyproject.toml
templates/poetry/nix/repo/: configs.nix  overlays.nix  overrides.nix  packages.nix  shells.nix
